plex/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-service-clusterip
  namespace: plex  
  labels:
    app: transmission
spec:
  selector:
    app: transmission
  ports:
    - name: webui
      port: 9091
      targetPort: 9091
      protocol: TCP
  type: ClusterIP
